# moni

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  gleam.toml
.github/workflows/: test.yml
migrations/: 20250104162539_utils.down.sql  20250104162539_utils.up.sql  20250110163200_user.down.sql  20250110163200_user.up.sql  20250110173455_project.down.sql  20250110173455_project.up.sql
src/: cli.rs  lib.rs  main.rs  moni.gleam  project.rs  user.rs
src/app/: router.gleam
src/queries/: add_project.sql  list_projects.sql
src/queries/user/: add_user.sql
test/: moni_test.gleam
